[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/TopMenu/Preferences/PreferencesDialog.gd" type="Script" id=1]
[ext_resource path="res://src/TopMenu/Preferences/Themes.gd" type="Script" id=2]
[ext_resource path="res://src/TopMenu/Preferences/TextEditor.gd" type="Script" id=3]

[node name="PreferencesDialog" type="AcceptDialog"]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Preferences"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 37.0

[node name="SearchBar" type="LineEdit" parent="VBoxContainer"]
margin_right = 108.0
margin_bottom = 24.0
clear_button_enabled = true
placeholder_text = "Search"
caret_blink = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 108.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer"]
margin_right = 21.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 33.0
margin_right = 108.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer"]
margin_right = 137.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Language" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer/VBoxContainer"]

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/ScrollContainer/VBoxContainer/Language"]
margin_right = 40.0
margin_bottom = 14.0
text = "Hello this is language"

[node name="Themes" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 4.0
margin_bottom = 4.0
script = ExtResource( 2 )

[node name="ThemesButtonContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer/VBoxContainer/Themes"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextEditor" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScrollContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[connection signal="text_changed" from="VBoxContainer/SearchBar" to="." method="_on_SearchBar_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_item_selected"]
